--- a/html/css/ploshadka.market.css
+++ b/html/css/ploshadka.market.css
@@ -21,7 +21,7 @@ Author: TARAN
   font-style: normal;
 }
 body {
-  font-family: "Montserrat", serif;
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -97,8 +97,13 @@ p {
   display: block;
 }
 
-.logo__img {
+.logo {
   padding: 1.5rem;
+}
+
+.logo__img {
+  width: 100%;
+  height: 100%;
 }
 
 .logo_title {
